[package]
name = "decrypt_repeating"
version = "0.1.0"
authors = ["Bertie <berniesnell@gmail.com>"]
edition = "2018"

[dependencies]
convert_hex_to_base64 = { path = "../convert_hex_to_base64" }
hex = "0.3.2"
single_byte_xor_cipher = { path = "../single_byte_xor_cipher" }

[dependencies.xor]
git = "https://github.com/zummenix/xor-rs/"